--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.9.0",
     "react": "^16.10.2",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
